--- a/src/app/generador-programa/pages/formulario/formulario.component.html
+++ b/src/app/generador-programa/pages/formulario/formulario.component.html
@@ -14,37 +14,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
           <div class="accordion-body">
 
-            <div class="row">
-              <div class="col">
-
-                <form [formGroup]="archivoForm"
-                      (ngSubmit)="uploadFile()">
-                  <div class="mb-3">
-                    <label for="formFile" class="form-label">Sube el archivo EPUB</label>
-                    <input (change)="epubFileChange($event)"
-                           accept=".epub"
-                           type="file"
-                           formControlName="file"
-                           class="form-control"
-                           id="formFile">
-                  </div>
-
-                  <div class="row">
-                    <div class="col">
-                      <button
-                        type="submit"
-                        class="btn btn-primary float-end"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo"
-                        aria-expanded="false">
-                          Guardar
-                        </button>
-                    </div>
-                  </div>
-                </form>
-
-              </div>
-            </div>
+            <app-file-uploader (menuEvent)="updateMenu($event)"></app-file-uploader>
 
           </div>
         </div>
