--- a/src/app/generador-programa/pages/formulario/formulario.component.html
+++ b/src/app/generador-programa/pages/formulario/formulario.component.html
@@ -1,15 +1,18 @@
 <div class="row">
   <div class="col mt-4">
-    <button class="btn btn-primary"
+    <!-- <button class="btn btn-primary"
             (click)="obtenerInformacion('loquesea', 'asd')"
-      >Obtener Datos</button>
+      >Obtener Datos
+    </button> -->
     <div class="accordion" id="accordion">
 
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
+
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             Subir archivo EPUB
           </button>
+
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
           <div class="accordion-body">
@@ -22,28 +25,19 @@
 
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
+
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
             Seleccionar capítulo
           </button>
+
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
           <div class="accordion-body">
 
-            <div class="row mt-3">
-              <div class="col">
-                <ul class="list-group">
-                  <li *ngFor="let menu of menuEPub; let i=index"
-                      (click)="obtenerInformacion(menu._Menu__route!, menu._Menu__name!)"
-                      [ngClass]="activeChapter === menu._Menu__route ? 'list-group-item active' : 'list-group-item' "
-                      class="list-group-item"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseThree"
-                      aria-expanded="false">
-                    {{ menu._Menu__name }}
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <app-menu
+              [menuEPub]="menuEPub"
+              (selectedChapterInfo)="obtenerInformacion( $event )">
+            </app-menu>
 
           </div>
         </div>
@@ -52,7 +46,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Pre Programa <small class="mx-2" *ngIf="selectedChapter"> Capitulo seleccionado: {{ selectedChapter }}</small>
+            Pre Programa <small class="mx-2" *ngIf="selectedChapter"> Capitulo seleccionado: {{ activeChapter }}</small>
           </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
