--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark" style="background-color: #961ffd;">
+<nav class="navbar navbar-dark" style="background-color: #5a3d88;">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">Generador de programa para las reuniones de entre semana</span>
   </div><br><br>
