--- a/src/app/generador-programa/components/actividad/actividad.component.html
+++ b/src/app/generador-programa/components/actividad/actividad.component.html
@@ -4,7 +4,7 @@
   <div class="col-4">
     <div class="row">
       <div class="col text-start">
-        <span>6:31
+        <span> {{ hora | date: 'hh:mm' }}
           <span class="cr">
             <span class="point">•</span>
             {{ actividad.nombreActividad }} <span *ngIf="actividad.tiempo > 0" class="ms-1">({{ actividad.tiempo }} mins)</span>
@@ -22,7 +22,17 @@
     </small>
   </div>
 
+
   <div class="col-6 aling-items-end text-end">
-    <span *ngFor="let participante of actividad.participantes">{{ participante.nombre }} <span *ngIf="actividad.participantes.length > 1"></span> </span>
+    <span *ngIf="actividad.participantes.length === 1; else dos " >
+      {{ actividad.participantes[0].nombre }}
+    </span>
   </div>
+
+  <ng-template #dos>
+    <span *ngIf=" actividad.participantes.length === 2">
+      {{ actividad.participantes[0].nombre }}/{{ actividad.participantes[1].nombre }}
+    </span>
+  </ng-template>
+
 </div>
