--- a/src/app/generador-programa/pages/programa/programa.component.html
+++ b/src/app/generador-programa/pages/programa/programa.component.html
@@ -23,7 +23,7 @@
       <div class="col-12 my-3">
         <div class="row">
             <div class="col-4 text-start fecha">
-              {{ subPrograma.fecha}} | {{ subPrograma.textoInicial }}
+              {{ subPrograma.fecha }} | {{ subPrograma.textoInicial }}
             </div>
             <div class="col text-end">
                 <small class="me-2 subtexto">Presidente:</small> {{ subPrograma.presidente }}
@@ -36,8 +36,8 @@
       <div class="my-3">
 
         <div class="row">
-          <div class="col-auto text-start">
-            {{ horaInicial }}
+          <div class="col-auto text-start time">
+            {{ horaInicial | date: 'hh:mm'}}
           </div>
           <div class="col-6 text-start">
             <li>{{ subPrograma.secciones[0].actividades[0].nombreActividad }}</li>
@@ -48,9 +48,8 @@
         </div>
 
         <div class="row">
-          <div class="col-auto text-start"
-              >
-            {{ subPrograma.secciones[0].actividades[1].hora }}
+          <div class="col-auto text-start time">
+            {{ subPrograma.secciones[0].actividades[1].hora | date: 'hh:mm' }}
           </div>
           <div class="col-6 text-start">
             <li>{{ subPrograma.secciones[0].actividades[1].nombreActividad }} <span class="ms-1">({{ subPrograma.secciones[0].actividades[1].tiempo}} min)</span></li>
@@ -70,6 +69,8 @@
           <app-actividad
             *ngFor="let actividad of subPrograma.secciones[1].actividades"
             [actividad]="actividad"
+            [hora]="hora"
+            (horaChange)="updateTime($event)"
           ></app-actividad>
       </div>
       <!-- Fin Seccion: Tesoros de la biblia -->
@@ -83,6 +84,8 @@
         <app-actividad
             *ngFor="let actividad of subPrograma.secciones[2].actividades"
             [actividad]="actividad"
+            [hora]="hora"
+            (horaChange)="updateTime($event)"
         ></app-actividad>
       </div>
       <!-- Fin Seccion: Seamos mejores maestros -->
@@ -95,6 +98,8 @@
         <app-actividad
             *ngFor="let actividad of subPrograma.secciones[3].actividades"
             [actividad]="actividad"
+            [hora]="hora"
+            (horaChange)="updateTime($event)"
         ></app-actividad>
       </div>
       <!-- Fin Seccion: Nuestra Vida Cristiana -->
